audit: regenerate codebase audit and quality scorecard (2026-04-26)
Full 22-section audit from source. Scorecard grade: C (55%). Key findings:
- CRITICAL: opensky-password hardcoded in application.yml
- BLOCKING: 70/123 public methods missing Javadoc (CQ-10)
- BLOCKING: stub patterns in 4 REST controllers + SOUL provider (CQ-11)
- No authentication on any endpoint (M0 milestone — flagged for architect review)
- Snyk OSS scan: 0 vulnerabilities; SAST scan unavailable (plan limitation)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>